# Danijel_System_Intergration

./: Danijel_System_Intergration.sln  README.md
00_extra/Marshalling/: index.js
00_extra/serializing/: Index.js
01_Data_Files/: me.csv  me.json  me.xml
02_Data_Files/: me.json  me.yaml
02_Data_Files/scripts/: package-lock.json
02_Modules/html_no_modules/: myModule.js
02_Modules/node_commonjs_modules/: index.js  myModule.js  package-lock.json
03_Encoding_Decoding/node/: index.js
03_Encoding_Decoding/python/: encoding.py
03_Modules/html_no_modules/: index.html
03_Modules/html_with_modules/: index.html
04._Encoding_Decoding/Node/: index.js
04_c_db_granular_access_integration/: README.md
04b._Database_granular_access/: Dockerfile  init.sql
04c_db_granular_access_integration/: README.md
05_Python_Environment/01._Virtualenv_Environment/: requirements.txt
05_Python_Environment/02._Pipenv_Environment/: Pipfile
05_Python_Environment/03._Poetry_Environment/: pyproject.toml
06a_WebSocket_Example/: app.js  client.js  package-lock.json  package.json
08._Server_to_server/python_server/: main.py  pyproject.toml
08a_Document_A_Database/: README.md  package.json
08b_Migrate_from_One_Database_to_Another/: migrationScript.js
08c_Auth_Integration/: README.md
09._Environment_Variables/: .env-dev copy  app.js  package-lock.json  package.json
09a_Generate_code_documentation/: product.js
10_Date/: app.js
10a_GraphQL/: app.js  package.json  schema.graphql
database_assignment/: Dockerfile  Dockerfile.sh  README.md  init.sql
(+67 files in other folders)
