[tool.poetry]
name = "03-poetry-environment"
version = "0.1.0"
description = ""
authors = ["Dani025a <dani025a@edu.easj.dk>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
