[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["Dani025a <dani025a@edu.easj.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
